# gpqa

./: .gitignore  Makefile  README.md  dataset-card-README.md  eval.py  example.py  gpqa_eval.py  main.py  pyproject.toml
.github/workflows/: build-paper.yml
Quantifying_Reasoning_Performance_with_Formatting_Constraints/: Makefile  README.md  references.bib
figures/: compliance_table.tex  summary_table.tex
paper/: Makefile  PRIMEarxiv.sty  README.md  main.tex  references.bib
src/: add_subdomain_temp.py  batch.py  cancel.py  eval.py  fix_json_extraction.py  main.py  test.py  upload.py
