[project]
name = "gpqa"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.24.1",
    "anthropic==0.7.3",
    "bs4==0.0.1",
    "datasets==2.15.0",
    "evaluate==0.4.1",
    "fire==0.5.0",
    "ipykernel==6.27.0",
    "openai==1.3.5",
    "pandas==1.5.2",
    "pre-commit==3.5.0",
    "pyrootutils==1.0.4",
    "python-dotenv==1.0.0",
    "scikit-learn==1.3.2",
    "seaborn==0.13.2",
    "sentencepiece==0.1.99",
    "tqdm==4.66.1",
    "transformers>=4.35.2",
    "wandb==0.16.0",
]
