[project]
name = "gpqa"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logfire",
    "anthropic",
    "openai",
    "pydantic-evals",
    "datasets",
    "pandas",
    "tqdm",
    "httpx==0.27.2",
    "matplotlib",
    "numpy",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
